--- a/JungholmInstruments/Views/LoginView.axaml
+++ b/JungholmInstruments/Views/LoginView.axaml
@@ -10,7 +10,8 @@
         Width="400"
         Height="500"
         WindowStartupLocation="CenterScreen"
-        CanResize="False">
+        CanResize="False"
+        Icon="/Assets/jungholm-logo.ico">
 
     <Design.DataContext>
         <vm:LoginViewModel/>
