--- a/JungholmInstruments/Views/MainWindow.axaml
+++ b/JungholmInstruments/Views/MainWindow.axaml
@@ -6,7 +6,7 @@
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="JungholmInstruments.Views.MainWindow"
         x:DataType="vm:MainWindowViewModel"
-        Icon="/Assets/avalonia-logo.ico"
+        Icon="/Assets/jungholm-logo.ico"
         Title="JungholmInstruments">
 
     <Design.DataContext>
